--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,15 +10,16 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
       - name: Set up JDK 20
-        uses: actions/setup-java@v2
+        uses: actions/setup-java@v3
         with:
           java-version: '20'
           distribution: 'temurin'
       - name: Build with Gradle
         uses: gradle/gradle-build-action@v2
         with:
+          gradle-version: 8.4
           arguments: build
           build-root-directory: .
       - name: Publish code coverage
