--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,4 +1,5 @@
 server:
+  address: 0.0.0.0
   port: ${PORT:8080}
 
 base-url: /api
@@ -14,6 +15,10 @@ spring:
     show-sql: true
     hibernate:
       ddl-auto: create
+
+  output:
+    ansi:
+      enabled: always
 
 rsa:
   private-key: classpath:certs/private.pem
